added Container in main.css with Padding of 1%

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -15,6 +15,9 @@ body{
     margin: 0%;
     background-color: var(--bg);
 }
+.Content {
+    padding:1%;
+}
 hr{
     border: 2px dashed var(--fg);
 }
