--- a/views/partials/aio_dld_popups.ejs
+++ b/views/partials/aio_dld_popups.ejs
@@ -61,7 +61,7 @@ hidden="true">
 <!--trade selection card info-->
 <!-- use to display cards info in /tradeSelection-->
 <div class="popup" id="tradeSelectionInfoPopUp" onmouseup="showCardDetails(event, true)" hidden="true">
-    <iframe style="width: 60%; height: 60%; left: 5%; display:block; margin:10%; top: 0.1%;" class="popupContents cardTable" id="tradeSelectionCardViewer" hidden="true">
+    <iframe style="padding: 0%; width: 70%; height: 70%; left: 5%; display:block; margin:10%; top: 0.1%;" class="popupContents cardTable" id="tradeSelectionCardViewer" hidden="true">
     </iframe>
 </div>
 
