--- a/views/partials/aio_dld_row_templates.ejs
+++ b/views/partials/aio_dld_row_templates.ejs
@@ -46,6 +46,7 @@
         <td class="tradeId">Id</td>
         <td class="tradeName">Name</td>
         <td class="tradeDisplayCards buttonContainer" onclick="toggleTable(false, event)">See Cards</td>
+        <td class="friendButton buttonContainer" onclick="addFriend(event)">Add Friend</td>
         <td><a class="tradeButton">Trade</a></td>
     </tr>
 </table>
