--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -22,6 +22,12 @@ hr{
     border: 2px dashed var(--fg);
 }
 
+.helpHr{
+    border: 1px dashed var(--fg);
+    margin-bottom: 1%;
+    margin-top: 1%;
+}
+
 /* text */
 h1{
     color: var(--txt);
