--- a/views/pages/cardInfo.ejs
+++ b/views/pages/cardInfo.ejs
@@ -58,7 +58,7 @@
                     Rarity: <%=otherCardInfo.rarity%>
                 </li>
             </ul>
-            <a id="cardViewerBackButton" onclick="checkIFrame(event)" style="cursor:pointer; display:block; color:white; position:absolute; bottom:2%; left:2%">Back</a>
+            <a id="cardViewerBackButton" onclick="checkIFrame(event)">Back</a>
         </div>
     </body>
 </html>
