--- a/public/stylesheets/cardViewer.css
+++ b/public/stylesheets/cardViewer.css
@@ -1,5 +1,5 @@
 body {
-    background-color:#2c4560;
+    background-image: linear-gradient(to right, #2c4560, #08294d);
     margin:0;
     font-family: Arial, sans-serif;
     color:white;
@@ -35,6 +35,7 @@ body {
     width:98vw;
     height:100vh;
     margin:auto;
+    padding:1%;
 }
 
 .displayTable {
