--- a/public/stylesheets/packOpener.css
+++ b/public/stylesheets/packOpener.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #2c4560;
+    background-image: linear-gradient(to right, #2c4560, #08294d);
     color: white;
     margin: 0%;
 }
