--- a/views/pages/deckBuilder.ejs
+++ b/views/pages/deckBuilder.ejs
@@ -11,42 +11,44 @@
 <body>
 
     <%- include ("../partials/aio_dld_header.ejs") %>
-
-    <h3>Sort By:</h3>
-    <button onclick="changeSortType(1)">Alphabetical</button>
-    <button onclick="changeSortType(2)">Stars (Ascend)</button>
-    <button onclick="changeSortType(5)">Stars (Descend)</button>
-    <button onclick="changeSortType(3)">Value (Ascend)</button>
-    <button onclick="changeSortType(4)">Value (Descend)</button>
-    <input type="text" id="searchBar" placeholder="Search">
-    <div class="horizontalAlignContainer">
-        <div id="collection" class="deckBuilderTable">
-            <h3>Collection</h3>
-            <table id="collectionCardsTable" class="cardTable" style="height: auto;">
-                <tbody></tbody>
-            </table>
-        </div>
-
-        <img id="largeImage" src="/images/card_back.jpg" alt="">
-       
     
-        <div id="deck" class="deckBuilderTable">
-            <h3>Deck</h3>
-            <input type="text" id="deckName" value="<%- deck.name %>" placeholder="Name Deck">
-            <table id="deckCardsTable" class="cardTable" style="height: auto;">
-                <tbody></tbody>
-            </table>
-            <h3>Extra Deck</h3>
-            <table id="extraDeckCardsTable" class="cardTable" style="height: auto;">
-                <tbody></tbody>
-            </table>
-            <button id="testHand" type="button" onclick="drawTestHand()">Test Hand</button>
-            <button id="saveDeck" type="button" onclick="saveDeck()">Save Deck</button>
-            <div id="testHand" hidden="true">
-                <h3 style="width: 100%;">Test Hand</h3>
-                <table id="testHandCardsTable" class="cardTable">
+    <div class="content">
+        <h3>Sort By:</h3>
+        <button onclick="changeSortType(1)">Alphabetical</button>
+        <button onclick="changeSortType(2)">Stars (Ascend)</button>
+        <button onclick="changeSortType(5)">Stars (Descend)</button>
+        <button onclick="changeSortType(3)">Value (Ascend)</button>
+        <button onclick="changeSortType(4)">Value (Descend)</button>
+        <input type="text" id="searchBar" placeholder="Search">
+        <div class="horizontalAlignContainer">
+            <div id="collection" class="deckBuilderTable">
+                <h3>Collection</h3>
+                <table id="collectionCardsTable" class="cardTable" style="height: auto;">
                     <tbody></tbody>
                 </table>
+            </div>
+    
+            <img id="largeImage" src="/images/card_back.jpg" alt="">
+           
+        
+            <div id="deck" class="deckBuilderTable">
+                <h3>Deck</h3>
+                <input type="text" id="deckName" value="<%- deck.name %>" placeholder="Name Deck">
+                <table id="deckCardsTable" class="cardTable" style="height: auto;">
+                    <tbody></tbody>
+                </table>
+                <h3>Extra Deck</h3>
+                <table id="extraDeckCardsTable" class="cardTable" style="height: auto;">
+                    <tbody></tbody>
+                </table>
+                <button id="testHand" type="button" onclick="drawTestHand()">Test Hand</button>
+                <button id="saveDeck" type="button" onclick="saveDeck()">Save Deck</button>
+                <div id="testHand" hidden="true">
+                    <h3 style="width: 100%;">Test Hand</h3>
+                    <table id="testHandCardsTable" class="cardTable">
+                        <tbody></tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
