--- a/views/partials/aio_dld_popups.ejs
+++ b/views/partials/aio_dld_popups.ejs
@@ -7,7 +7,7 @@
 <!-- use to display card/friend/trade info in /admin-->
 <div class="popup" id="adminUserTableInfoPopUp" onmouseup="toggleTable(true, 0, event, 'user')"
 hidden="true">
-    <table class="popupContents" id="adminTableInfoTable">
+    <table class="popupContents cardTable" id="adminTableInfoTable">
         <thead>
             <tr>
                 <th id="adminTableInfoHeader" colspan="100">ColName</th>
