added blurb to landing

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -252,3 +252,13 @@ select {
 .noMatchMessage{
     width: 100%;
 }
+
+ul {
+    color: white;
+    margin-top: -16px;
+}
+
+.quarter {
+    width: 24%;
+    float: left;
+}
