--- a/views/pages/pack-opener.ejs
+++ b/views/pages/pack-opener.ejs
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Pack Opener</title>
+        <title>Pack Opener - AIO DLD</title>
         <link rel="stylesheet" href="/stylesheets/packOpener.css">
     </head>
 
-    <%- include ("../partials/aio_dld_header.ejs") %>
-
     <body>
+        <%- include ("../partials/aio_dld_header.ejs") %>
+
         <div class="columnLeft">
             <h1 id="boxname"><%= name %></h1>
 
