--- a/views/pages/pack-nav.ejs
+++ b/views/pages/pack-nav.ejs
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Box Selection</title>
-        <!-- <link rel="stylesheet" href="/../../stylesheets/main.css"> -->
+        <title>Box Selection - AIO DLD</title>
         <link rel="stylesheet" href="/../../stylesheets/packOpener.css">
     </head>
 
     <body>
-        <div class="Content">
-            <%- include ("../partials/aio_dld_header.ejs") %>
+        <%- include ("../partials/aio_dld_header.ejs") %>
 
+        <div class="Content">
             <h1 align="center">Box Selection</h1>
             
             <form action="/box/1" align="center" method="get">
@@ -25,7 +24,6 @@
                 <input class="select" type="submit" value="Flame Of The Tyrant">
             </form> <br>
             
-
             <script>
                 //javascript here
             </script>
