--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -3,7 +3,7 @@
     --bg:#2c4560;
     --bg_highlight: #3a3a3a;
 
-    --txt: #f5efed;
+    --txt: black;
 
     /* Use for elements or stuff that stands out against bg*/
     --fg: #6f6f6f;
@@ -261,7 +261,6 @@ select {
     margin-top:1%;
     border-radius:10px;
     border-width:2px;
-    color:black;
 }
 
 #submitBtn {
